website is available, some change still required

--- a/Admin/Admin_log.html
+++ b/Admin/Admin_log.html
@@ -1,54 +1,1 @@
-<?xml version = "1.0" encoding = "utf-8" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns = "http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>登陆</title>
-<style>
-body {
-	background-image:url(../image/admin_log_h_back.jpg);
-	text-align:center;
-	background-repeat:no-repeat;
-}
-h1 {
-	filter:glow(color=#FF0,strength=5);
-	font-size:38px; 
-	font-family:STXinwei,STXingkai,SimHei;
-	padding-top:50px;
-}
-table {
-	text-align:center;
-	margin-left:auto;
-	margin-right:auto;
-}
-</style>
-</head>
-<body>
-<div> <h1>北京大学餐饮信息查询系统</h1></div>
-<br /> <br /> <br /> <br /> <br /> <br />
-<div>
-<form action="../PHP/Host/Admin_log.php" method="post">
-<input type="hidden" name="test" value="false" />
-<table>
-<tr>
-	<td><b>用户名：</b></td>
-	<td>
-	<input type="text" name="uesername"/>
-	</td>
-</tr>
-<tr>
-	<td><b>密码：</b></td>
-	<td>
-    <input type="password" name="password" />
-    </td>
-</tr>
-</table>
-<p>
-<br />
-<input type="submit" value="确定" />
-<p><a href="../index.html">返回首页</a></p>
-</p>
-</form>
-</div>
-</body>
-</html>
+<meta http-equiv="refresh" content="0;URL=../index.html">
