--- a/index.html
+++ b/index.html
@@ -3,46 +3,82 @@
 <html xmlns = "http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>餐饮信息查询</title>
-<script type="text/javascript"  src="Javascript/index.js" ></script>
-
-<link href="CSS/index.css" rel="stylesheet" type="text/css" />
+<title>登陆</title>
+<style>
+body {
+	background-image:url(image/admin_log_h_back.jpg);
+	text-align:center;
+	background-repeat:no-repeat;
+}
+h1 {
+	filter:glow(color=#FF0,strength=5);
+	font-size:38px; 
+	font-family:STXinwei,STXingkai,SimHei;
+	padding-top:50px;
+}
+table {
+	text-align:center;
+	margin-left:auto;
+	margin-right:auto;
+}
+a.box:link,a.box:visited
+{
+    display:block;
+    font-weight:bold;
+    color:#FFFFFF;
+    background-color:#000080;
+    width:100px;
+    text-align:center;
+    padding:4px;
+    text-decoration:none;
+    font-size:0.8em;
+}
+a.box:hover,a.box:active
+{
+    background-color:#333399;
+}
+</style>
 </head>
 <body>
-<div id="all">
+<script type="text/javascript">
+function autologin()
+{
+    document.getElementById('user').value="guest";
+    document.getElementById('pwd').value="guest";
+    document.loginform.submit();
+}
+</script>
+<div> <h1>北京大学餐饮信息查询系统</h1></div>
+<br /> <br /> <br /> <br /> <br /> <br />
+<div>
+<form name="loginform" action="PHP/Host/Admin_log.php" method="post">
+<input type="hidden" name="test" value="false" />
 <table>
 <tr>
-	<td><ul class="logo"><li><img src="image/logo.gif" /></li></ul></td>
-    <td class="row1"><p>餐饮信息查询系统</p></td>
+	<td><b>用户名：</b></td>
+	<td>
+	<input id="user" type="text" name="useername"/>
+	</td>
 </tr>
 <tr>
+	<td><b>密码：</b></td>
 	<td>
-	<ul class="pho" onmouseover="Put()">
-	<li>
-	<img class="slide" src="image/yannan_1.jpg" width="330" height="370"/>
-	<img class="slide" src="image/xue1_1.jpg" width="330" height="370"/>
-	<img class="slide" src="image/campus_china_1.jpg" width="330" height="370"/>
-	<img class="slide" src="image/nongyuan_1.jpg" width="330" height="370"/>
-	<img class="slide" src="image/xue5_1.jpg" width="330" height="370"/>
-	</li>
-	</ul>
-	</td>
-	<td>
-	<ul class="link">
-	<form id="form1" action="PHP/Guest/showAllDishes.php" method="post">
-	<input type="hidden" name="start" value="0" />
-	</form>
-	<li onclick="document.getElementById('form1').submit();" style="cursor:hand; color:#00F;">
-        <b>食客查询</b>
-    </li><br />
-	<li><a href="Admin/Admin_log.html"><b>管理员登陆</b></a></li>
-	</ul>
-	</td>
+    <input id="pwd" type="password" name="password" />
+    </td>
 </tr>
 </table>
+<p>
+<br />
+<input type="submit" value="确定" />
+<table>
+<tr>
+<td><a href="#">用户注册</a></td>
+<td>  </td>
+<td><a href="#loginform" onclick="autologin()">匿名登录</a></td>
+</tr>
+</table>
+</p>
+</form>
 </div>
 </body>
-<script type="text/javascript">
-    Makeshllow();
-</script>
 </html>
