try to validate admin css

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
   <div class="dialog-cont">
     <div class="pop-win-inner">
-      <form name="loginform" method="post" action="PHP/login_redict.php">
+      <form name="loginform" method="post" action="php/login_redict.php">
       <input type="hidden" name="test" value="false" />
       <div class="form-block">
         <label class="label" for="authuser">帐号：</label>
@@ -73,7 +73,7 @@
       </div>
       <div class="pop-win-misc">
         <span class="note">
-          <a href="PHP/Guest/User_reg.php">注册用户</a>
+          <a href="php/guest/User_reg.php">注册用户</a>
         </span>
         或
         <span class="note">
