--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns = "http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -6,6 +7,7 @@
   <link href="css/base.css" type="text/css" rel="stylesheet"/>
   <link href="css/index.css" type="text/css" rel="stylesheet"/>
   <script type="text/javascript">
+  <!--
     function fixPos()
     {
        var width=400;
@@ -30,6 +32,7 @@
     }
     window.onload=fixPos;
     window.onresize=fixPos;
+  -->
   </script>
   <style type="text/css">
   body
